--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -1,34 +1,39 @@
 name: deploy_frontend
-# Deployes when push is made from frontend folder
+# Deploys when push is made from frontend folder
 
 on:
-    push:
-        branches: [ main ]
-        paths:
-        - 'frontend/**'    
+  push:
+    branches: [ main ]
+    paths:
+      - 'frontend/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: azure/login@v1
-      with:
+      - uses: actions/checkout@v3
+
+      - uses: azure/login@v1
+        with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Upload to blob storage
-      uses: azure/CLI@v1
-      with:
-        inlineScript: |
-            az storage blob upload-batch --account-name azureresumestorage01 --auth-mode key -d '$web' -s frontend/ --overwrite
-    - name: Purge CDN endpoint
-      uses: azure/CLI@v1
-      with:
-        inlineScript: |
-           az cdn endpoint purge --content-paths  "/*" --profile-name "azureresumecloud" --name "azureresumecloud" --resource-group "azureresume-rg"
+      # Upload files to Azure Blob Storage
+      - name: Upload to Azure Blob Storage
+        uses: bacongobbler/azure-blob-storage-upload@main
+        with:
+          source_dir: frontend/  # Adjust to the path where your frontend files are
+          container_name: '$web'
+          connection_string: ${{ secrets.ConnectionString }}
+          overwrite: 'true'  # Properly indented
 
-  # Azure logout
-    - name: logout
-      run: |
-            az logout
-      if: always()
+      - name: Purge CDN endpoint
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az cdn endpoint purge --content-paths "/*" --profile-name "azureresumecloud" --name "azureresumecloud" --resource-group "azureresume-rg"
+
+      # Azure logout
+      - name: logout
+        run: |
+          az logout
+        if: always()
