--- a/backend/api/requirements.txt
+++ b/backend/api/requirements.txt
@@ -1,9 +1,14 @@
 azure-core==1.31.0
 azure-cosmos==4.7.0
-azure-functions==1.21.0
+azure-functions==1.21.1
 certifi==2024.8.30
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
+colorama==0.4.6
 idna==3.10
+iniconfig==2.0.0
+packaging==24.1
+pluggy==1.5.0
+pytest==8.3.3
 requests==2.32.3
 six==1.16.0
 typing_extensions==4.12.2
