backend workflow bug fix

--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -34,7 +34,7 @@ jobs:
         
         python -m pip install --upgrade pip
         pip install -r backend/api/requirements.txt --target="./backend/api/.python_packages"
-        
+        pip install pytest  # Ensure pytest is installed
 
     - name: 'Run Unit Test'
       shell: bash
