--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -31,10 +31,11 @@ jobs:
     - name: 'Resolve Project Dependencies Using Pip'
       shell: bash
       run: |
-        
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api'
         python -m pip install --upgrade pip
-        pip install -r backend/api/requirements.txt --target="./backend/api/.python_packages"
-        pip install pytest  # Ensure pytest is installed
+        pip install -r requirements.txt --target=".python_packages"
+        popd
+
 
     - name: 'Run Unit Test'
       shell: bash
