--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -7,7 +7,7 @@ on:
       - 'backend/**'
 
 env:
-  AZURE_FUNCTIONAPP_NAME: GetResumeCounter
+  AZURE_FUNCTIONAPP_NAME: ResumeCounterGet
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'backend'
   PYTHON_VERSION: '3.11'
 
